# ua_vit

./: .gitignore  CMakeLists.txt  README.md  cuda_kernels.cu  data_loader.cpp  data_loader.h  debug_training.cpp  hybrid_kernels.cu  hybrid_main.cpp  hybrid_vit.cpp  hybrid_vit.h  main.cpp  quick_test.cpp  regularization.h  setup_cuda.sh  simple_test.cpp  simple_vit.cpp  test_cuda.cu  test_data_loader.cpp  vit_transformer.cpp  vit_transformer.h
